Fixed alignment of arrows

--- a/react-datepicker.css
+++ b/react-datepicker.css
@@ -46,7 +46,7 @@
   border-bottom: 1px solid #aeaeae;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  padding-top: 5px;
+  padding-top: 8px;
   position: relative; }
 
 .datepicker__current-month {
