--- a/src/stylesheets/datepicker.scss
+++ b/src/stylesheets/datepicker.scss
@@ -30,7 +30,7 @@
   border-bottom: 1px solid $border-color;
   border-top-left-radius: $border-radius;
   border-top-right-radius: $border-radius;
-  padding-top: 5px;
+  padding-top: 8px;
   position: relative;
 }
 
